5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1759_2108.log
== TEST (2019-05-29 20:07:02) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0
while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l.replace(l[I],p)
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:07:15) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0
while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:07:51) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:08:20) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- EXECUTION TIME:
0.615485
-- TEST CASE 1:
---- input:
teste
---- correct output:
peppe
---- user output:
pespe
-- TEST CASE 2:
---- input:
flor
---- correct output:
ppop
---- user output:
plor
-- TEST CASE 3:
---- input:
abacaxi
---- correct output:
apapapi
---- user output:
pbpcpxi
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:32) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:37) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:42) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:46) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:50) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:55) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:09:00) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:17:51) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	elif(l[I] != "e")
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
File "XXXX", line 10
    elif(l[I] != "e")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:17:56) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	elif(l[I] != "e"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:18:54) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	elif(l[I] == "r"):
		l = l.replace(l[I],"p")
	I = I+1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:22:28) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0
C = 0
while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[C],"p")
	I = I+1
	C = C + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:22:36) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0
C = 0
while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[C],"p")
	I = I+1
	C = C + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:23:05) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
	print(I)
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:23:25) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
		I = I+1
	I = I+1
	print(I)
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:24:24) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
		I = I+1
	I = I+1
	print(I)
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:24:49) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I != size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
		I = I+1
	I = I+1
	print(I)
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:25:13) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
	print(I)
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:25:33) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1

print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:25:42) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1

print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:25:56) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
print(I)
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:26:09) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:26:12) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
		print(l)
-- ERROR:
File "XXXX", line 11
    print(l)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:26:16) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I+1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:26:47) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	I = I + 1
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:27:42) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:27:52) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:55:18) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	I = 0
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:17:59) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	PI = P[I]
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(PI,"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:14) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	PI = l[I]
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(PI,"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:39) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	
	if(l[I]!= "a" or "e" or "i" or "o" or "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:54) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	
	if(l[I]!= "a" or l[I]!= or l[I]!= "e" or l[I]!= "i" or l[I]!= "o" or l[I]!= "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
File "XXXX", line 9
    if(l[I]!= "a" or l[I]!= or l[I]!= "e" or l[I]!= "i" or l[I]!= "o" or l[I]!= "u"):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:08) 
-- CODE:
from numpy import*

l = input("Escreve tua frase ae:").lower()

I = 0

while(I < size(l)):
	
	if(l[I]!= "a" or  l[I]!= "e" or l[I]!= "i" or l[I]!= "o" or l[I]!= "u"):
		l = l.replace(l[I],"p")
	I = I + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
